--- a/p8105_hw2_ar4459_practice.Rmd
+++ b/p8105_hw2_ar4459_practice.Rmd
@@ -20,7 +20,7 @@ month_df =
   )
 
 pols = 
-  read_csv("hw2_data/pols-month.csv") |>
+  read_csv("data/pols-month.csv") |>
   separate(mon, into = c("year", "month_num", "day"), convert = TRUE) |>
   mutate(
     president = recode(prez_gop, "0" = "dem", "1" = "gop", "2" = "gop")) |>
@@ -32,7 +32,7 @@ pols =
 
 ```{r clean_538_snp}
 snp = 
-  read_csv("hw2_data/snp.csv") |>
+  read_csv("data/snp.csv") |>
   separate(date, into = c("month", "day", "year"), convert = TRUE) |>
   arrange(year, month) |>
   mutate(month = month.name[month]) |>
@@ -43,7 +43,7 @@ Finally, we tidy the `unemployment` data so that it can be merged with the `pols
 
 ```{r clean_538_unemp}
 unemployment = 
-  read_csv("hw2_data/unemployment.csv") |>
+  read_csv("data/unemployment.csv") |>
   rename(year = Year) |>
   pivot_longer(
     Jan:Dec, 
@@ -67,24 +67,31 @@ str(data_538)
 # Problem 2
 ```{r}
 mr_wheel_df =
-  read_xlsx("hw2_data/202207 Trash Wheel Collection Data.xlsx",1, range = "A2:N549") |> 
+  read_xlsx("data/202309 Trash Wheel Collection Data.xlsx", 1, range = "A2:N587") |> 
   janitor::clean_names()|> 
-  mutate(homes_powered = weight_tons*500/30
+  drop_na(dumpster) |> 
+  mutate(homes_powered = (weight_tons)*500/30,
+         mr_trash = "Mr. Trash Wheel"
     ) |> 
-  select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything())
+  select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything()) 
+
 
 prof_wheel_df =
-  read_xlsx("hw2_data/202207 Trash Wheel Collection Data.xlsx",2 , range = "A2:M96") |> 
+  read_xlsx("data/202309 Trash Wheel Collection Data.xlsx",2 , range = "A2:M109") |> 
   janitor::clean_names()|> 
-  mutate(homes_powered = weight_tons*500/30
+  drop_na(dumpster) |> 
+  mutate(homes_powered = (weight_tons)*500/30,
+         prof_trash = "Professor Trash Wheel"
     ) |> 
   select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything())
 
 gwyn_wheel_df =
-  read_xlsx("hw2_data/202207 Trash Wheel Collection Data.xlsx",4 , range = "A2:K108") |> 
+  read_xlsx("data/202309 Trash Wheel Collection Data.xlsx",4 , range = "A2:L159") |> 
   janitor::clean_names()|> 
-  mutate(homes_powered = weight_tons*500/30
+  mutate(homes_powered = (weight_tons)*500/30,
+         gwyn_trash = "Gwynnda Trash Wheel"
     ) |> 
+  drop_na(dumpster) |> 
   select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything())
 
 
@@ -99,9 +106,9 @@ full_merge_df =
 
 ```
 
-The total number of observations in the resulting dataset is`r nrow(full_merge_df) `. Key variables include the weight in tons in Mr Trash Wheel, Professor Trash Wheel and Gwynnda. 
+The total number of observations in the resulting dataset is `r nrow(full_merge_df) `. Key variables include the weight in tons in Mr Trash Wheel, Professor Trash Wheel and Gwynnda. 
 
-The total weight collected by Professor Trash Wheel is `r sum(pull(full_merge_df, weight.x))` tons.
+The total weight collected by Professor Trash Wheel is `r sum(pull(prof_wheel_df, weight))` tons.
 
 The total number of cigarette butts collected by Gwynnda in July of 2021 is `r sum(select(full_merge_df, month, year, cigarette_butts)|> filter(month == "July", year == "2021") |> select(cigarette_butts))`.
 
@@ -111,7 +118,7 @@ The total number of cigarette butts collected by Gwynnda in July of 2021 is `r s
 
 ```{r}
 mci_df = 
-  read_csv("hw2_data/MCI_baseline.csv", skip = 1) |> 
+  read_csv("data/MCI_baseline.csv", skip = 1) |> 
   janitor::clean_names() |>
   mutate(
     sex = case_match(
@@ -125,10 +132,11 @@ mci_df =
       0 ~ "non-carrier"
     ), 
   ) |> 
-   select(id, baseline_age = current_age, onset_age = age_at_onset, everything())
+   select(id, baseline_age = current_age, onset_age = age_at_onset, everything()) |> 
+   filter(baseline_age < onset_age | is.na(onset_age))
 ```
 
-An important step in the import process include skipping the first row in the csv file because it is a legend about the dataset and not data. Relevant features of the dataset include the age at baseline, age at onset, and the whether the participant is a carrier or non-carrier of the apoe4 variant. These are relevant because they provide information to investigate whether participants with the apoe4 variant develop MCI at a younger age.
+An important step in the import process include skipping the first row in the csv file because it is a legend about the dataset and not data. Additionally, I removed those who already had a diagnosis of MCI during baseline. Lastly, I removed those who had no age of onset in the dataset, meaning they have not had a diagnosis of MCI.  Relevant features of the dataset include the age at baseline, age at onset, and the whether the participant is a carrier or non-carrier of the apoe4 variant. These are relevant because they provide information to investigate whether participants with the apoe4 variant develop MCI at a younger age.
 
 ```{r}
 # number of participants at baseline 
@@ -137,7 +145,6 @@ nrow(mci_df)
 # participants who developed MCI
 developed_df = 
   filter(mci_df, onset_age != ".")
-
 
 # average age at baseline
 mean(pull(mci_df, baseline_age))
@@ -151,7 +158,7 @@ female_car_df =
 
 There were a total of `r nrow(mci_df) ` participants recruited at baseline. 
 
-Of the total participants at baseline, `r nrow(developed_df)/nrow(mci_df)` was the proportion of participants who developed MCI.
+Of the total participants at baseline, `r nrow(developed_df)` was the number of participants who developed MCI.
 
 The average age at baseline is `r mean(pull(mci_df, baseline_age))`. 
 
@@ -159,19 +166,19 @@ The proportion of women in the study who are carriers is `r nrow(female_car_df)/
 
 ```{r}
 amyloid_df = 
-  read_csv("hw2_data/mci_amyloid.csv", skip = 1) |> 
+  read_csv("data/mci_amyloid.csv", skip = 1) |> 
   janitor::clean_names() |> 
   select(id = study_id, t0 = baseline, t1 = time_2, t2 = time_4, t3 = time_6, t4 = time_8) 
 ```
 
-The steps of the import included loading the dataset using the read_csv function and the relative pathname. I also used skip = 1 because the first row in the csv file was a key or legend that described the time points in the dataset. Since this row was not data, I did not include it in my dataframe.
+The steps of the import included loading the dataset using the read_csv function and the relative pathname. I also used skip = 1 because the first row in the csv file was a key or legend that described the time points in the dataset. Since this row was not data, I did not include it in my dataframe. I also changed the column name of baseline to t0 and the remaining time points so it followed an increase time for each column. 
 
 ```{r}
 included_one = anti_join(mci_df, amyloid_df, by = "id")
 nrow(included_one)
 ```
 
-There are a total of `r nrow(included_one) ` participants who appear in only the baseline or amyloid datasets. This includes participants with the following id: 14, 49, 92, 179, 268, 304, 389, 412.
+There are a total of `r nrow(included_one) ` participants who appear in only the baseline or amyloid datasets. This includes participants with the following id: 14, 4, 268.
 
 ```{r}
 included_both = inner_join(mci_df, amyloid_df, by = "id")
@@ -180,3 +187,10 @@ nrow(included_both)
 ```
 
 The total number of participants included in both datasets is `r nrow(included_both) `. The mean age at baseline is `r mean(pull(included_both, baseline_age))`.
+
+```{r}
+#export the result as  a CSV in data directory
+write_csv(included_both, "data/demographic_biomarker_cleaned.csv")
+```
+
+
