--- a/p8105_hw2_ar4459_practice.Rmd
+++ b/p8105_hw2_ar4459_practice.Rmd
@@ -71,7 +71,8 @@ mr_wheel_df =
   janitor::clean_names()|> 
   drop_na(dumpster) |> 
   mutate(homes_powered = (weight_tons)*500/30,
-         mr_trash = "Mr. Trash Wheel"
+         mr_trash = "Mr. Trash Wheel",
+         year = as.numeric(year)
     ) |> 
   select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything()) 
 
@@ -83,7 +84,8 @@ prof_wheel_df =
   mutate(homes_powered = (weight_tons)*500/30,
          prof_trash = "Professor Trash Wheel"
     ) |> 
-  select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything())
+  select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything()) 
+
 
 gwyn_wheel_df =
   read_xlsx("data/202309 Trash Wheel Collection Data.xlsx",4 , range = "A2:L159") |> 
@@ -94,15 +96,8 @@ gwyn_wheel_df =
   drop_na(dumpster) |> 
   select(dumpster, month, year, date, weight = weight_tons, volume = volume_cubic_yards, everything())
 
-
-mr_prof_df =
-  full_join(mr_wheel_df, 
-            prof_wheel_df,
-            by = "dumpster")
 full_merge_df =
-  full_join(mr_prof_df, 
-            gwyn_wheel_df,
-            by = "dumpster")
+  bind_rows(mr_wheel_df, prof_wheel_df, gwyn_wheel_df, .id = "Dumpster")
 
 ```
 
@@ -168,22 +163,31 @@ The proportion of women in the study who are carriers is `r nrow(female_car_df)/
 amyloid_df = 
   read_csv("data/mci_amyloid.csv", skip = 1) |> 
   janitor::clean_names() |> 
-  select(id = study_id, t0 = baseline, t1 = time_2, t2 = time_4, t3 = time_6, t4 = time_8) 
+  select(id = study_id, t0 = baseline, t1 = time_2, t2 = time_4, t3 = time_6, t4 = time_8) |> 
+  pivot_longer(
+    t0:t4,
+    names_to = "time_points",
+    values_to = "ratio")
 ```
 
 The steps of the import included loading the dataset using the read_csv function and the relative pathname. I also used skip = 1 because the first row in the csv file was a key or legend that described the time points in the dataset. Since this row was not data, I did not include it in my dataframe. I also changed the column name of baseline to t0 and the remaining time points so it followed an increase time for each column. 
 
 ```{r}
-included_one = anti_join(mci_df, amyloid_df, by = "id")
-nrow(included_one)
+mci_only = anti_join(mci_df, amyloid_df, by = "id")
+nrow(mci_only)
+
+amyloid_only = anti_join(amyloid_df, mci_df, by = "id")
+nrow(amyloid_only)
+
 ```
 
-There are a total of `r nrow(included_one) ` participants who appear in only the baseline or amyloid datasets. This includes participants with the following id: 14, 4, 268.
+There are a total of `r nrow(mci_only)` participants who appear in only the baseline. This includes participants with the following id: 14, 4, 268.
+
+There are a total of `r nrow(amyloid_only)` participants who appear in only the amyloid.
 
 ```{r}
 included_both = inner_join(mci_df, amyloid_df, by = "id")
 nrow(included_both)
-
 ```
 
 The total number of participants included in both datasets is `r nrow(included_both) `. The mean age at baseline is `r mean(pull(included_both, baseline_age))`.
